fixed alignment for seconds markers

--- a/Styles/global/_countdown.less
+++ b/Styles/global/_countdown.less
@@ -29,7 +29,7 @@
   }
   .counter .hours::before, .counter .minutes::before, .counter .seconds::before {
     position: absolute;
-    top: -3px;
+    top: -1px;
     left: -7px;
     content: ":";
     opacity: 0.7;
