--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -12437,7 +12437,7 @@ img {
 .counter .minutes::before,
 .counter .seconds::before {
   position: absolute;
-  top: -3px;
+  top: -1px;
   left: -7px;
   content: ":";
   opacity: 0.7;
